Fixed the main logo for Microsoft Edge browser
The logo was not shown in center + It was adding horizontal scroll

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: 700; letter-spacing: 0.05em; margin: 0 0 1
 /********** Section - Home ***************************************************/
 /*****************************************************************************/
 #home { height: 100vh; background-color: #002846; }
-    #home div.logo img { position: absolute; width: 60vw; top: 25vh; left: 50%; -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); -webkit-transform: translateX(-50%); transform: translateX(-50%); z-index: 999; }
+    #home div.logo img { position: absolute; width: 60vw; top: 25vh; z-index: 999; left: 50%; margin-right: -50%; -moz-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 .img-next { background-image: url("../../images/arrow.svg"); background-repeat: no-repeat; background-size: 100% auto; cursor: pointer; height: 65px; width: 65px; display: block; margin: auto; opacity: 0.25; position: absolute; top: 85vh; left: 50%; -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); -webkit-transform: translateX(-50%); transform: translateX(-50%); }
 
 @media screen and (max-width: 767px) {
